<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_10dp"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingTop="12dp"
    android:paddingRight="12dp"
    android:paddingBottom="16dp">

    <com.colombia.credit.view.TextViewDrawable
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/svg_error_hint"
        android:drawablePadding="4dp"
        android:text="@string/bank_hint"
        android:textColor="@color/color_FE4F4F"
        android:textSize="12sp"
        app:isAlignCenter="false" />

    <!--银行类型-->
    <com.colombia.credit.view.baseinfo.BaseInfoView
        android:id="@+id/biv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hint="@string/work_selector"
        app:if_can_edit="false"
        app:left_icon="@drawable/svg_bank_name"
        app:rightIcon_visiblity="visible"
        app:title="@string/bank_name_title" />

    <!-- 卡类型 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bank_card_type"
        android:textColor="@color/color_666666"
        android:textSize="13sp" />

    <RadioGroup
        android:id="@+id/bank_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/bank_rb_ahorrs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/selector_bank_card_type"
            android:drawablePadding="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/bank_card_ahorros"
            android:textColor="@color/color_333333"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/bank_rb_corriente"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:background="@null"
            android:button="@null"
            android:drawableLeft="@drawable/selector_bank_card_type"
            android:drawablePadding="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/bank_card_corriente"
            android:textColor="@color/color_333333"
            android:textSize="15sp" />
    </RadioGroup>

    <!-- 银行卡号 -->
    <com.colombia.credit.view.baseinfo.BaseInfoView
        android:id="@+id/biv_bankno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:desc_color="@color/colorPrimary"
        app:desc_text="@string/bank_no_desc"
        app:hint="@string/bank_no_hint"
        app:inputType="number"
        app:left_icon="@drawable/svg_bank_no"
        app:max_length="25"
        app:rightIcon_visiblity="gone"
        app:title="@string/bank_no_title" />

    <!-- 首贷进件不显示，添加银行卡时显示 -->
    <!-- 再次确认银行卡号 -->
    <com.colombia.credit.view.baseinfo.BaseInfoView
        android:id="@+id/biv_bankno_tow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:desc_color="@color/colorPrimary"
        app:desc_text="@string/bank_no_desc"
        app:hint="@string/bank_no_hint2"
        app:inputType="number"
        app:left_icon="@drawable/svg_bank_no"
        app:max_length="25"
        app:rightIcon_visiblity="gone"
        app:title="@string/bank_no_title2"
        tools:visibility="visible" />

    <Space
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_commit"
        style="@style/marginLeftAndRight12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_apply_bg"
        android:gravity="center"
        android:padding="11dp"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/svg_safe"
        android:drawablePadding="4dp"
        android:text="@string/process_safe"
        android:textColor="@color/color_aaaaaa"
        android:textSize="12sp" />
</LinearLayout>