<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/image_home_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <com.colombia.credit.view.ToolbarLayout
        android:id="@+id/process_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:tl_back_text_color="@color/white"
        app:tl_left_icon="@drawable/svg_left_back"
        app:tl_show_custom_icon="true"
        app:tl_text_gravity="center"
        app:tl_title="@string/personal_info" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aiv_top_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_toolbar"
        app:srcCompat="@drawable/image_process_bg" />

    <com.colombia.credit.view.ProcessView
        android:id="@+id/process_pv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_toolbar"
        app:layout_constraintTop_toTopOf="@id/aiv_top_bg"
        app:pv_curr_step="1" />

    <androidx.core.widget.NestedScrollView
        style="@style/marginLeftAndRight16"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_white_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_pv">

        <LinearLayout
            style="@style/marginLeftAndRight12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <!--email-->
            <com.colombia.credit.view.baseinfo.EmailInfoView
                android:id="@+id/biv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hint="@string/email_hint"
                app:left_icon="@drawable/svg_email"
                app:rightIcon_visiblity="gone"
                app:stringArray="@array/email_list"
                app:title="@string/email" />

            <!-- 教育 -->
            <com.colombia.credit.view.baseinfo.BaseInfoView
                android:id="@+id/biv_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hint="@string/education_hint"
                app:if_can_edit="false"
                app:left_icon="@drawable/svg_education"
                app:rightIcon_visiblity="visible"
                app:title="@string/education" />

            <!-- 家庭住址 -->
            <com.colombia.credit.view.baseinfo.BaseInfoView
                android:id="@+id/biv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hint="@string/address_hint"
                app:if_can_edit="false"
                app:left_icon="@drawable/svg_location"
                app:rightIcon_visiblity="visible"
                app:title="@string/address" />

            <!-- 详细信息 -->
            <com.colombia.credit.view.baseinfo.BaseInfoView
                android:id="@+id/biv_addr_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hint="@string/address_detail"
                app:rightIcon_visiblity="gone"
                app:title_visiblity="gone" />
            <!-- 婚姻 -->
            <com.colombia.credit.view.baseinfo.BaseInfoView
                android:id="@+id/biv_marriage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hint="@string/marriage_hint"
                app:if_can_edit="false"
                app:left_icon="@drawable/svg_marriage"
                app:rightIcon_visiblity="visible"
                app:title="@string/marriage" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_commit"
                style="@style/marginLeftAndRight12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/shape_apply_bg"
                android:gravity="center"
                android:padding="11dp"
                android:text="@string/commit"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@drawable/svg_safe"
                android:drawablePadding="4dp"
                android:text="@string/process_safe"
                android:textColor="@color/color_aaaaaa"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>