<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/image_home_bg"
        app:layout_constraintTop_toTopOf="parent" />

    <com.colombia.credit.view.ToolbarLayout
        android:id="@+id/process_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:paddingRight="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:tl_back_text_color="@color/white"
        app:tl_left_icon="@drawable/svg_left_back"
        app:tl_show_custom_icon="true"
        app:tl_text_gravity="center"
        app:tl_title="@string/kyc_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aiv_top_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_toolbar"
        app:srcCompat="@drawable/image_process_bg" />

    <com.colombia.credit.view.ProcessView
        android:id="@+id/process_pv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_toolbar"
        app:layout_constraintTop_toTopOf="@id/aiv_top_bg"
        app:pv_curr_step="5" />

    <androidx.core.widget.NestedScrollView
        style="@style/marginLeftAndRight16"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_white_10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_pv">

        <LinearLayout
            style="@style/marginLeftAndRight12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <TextView
                style="@style/marginLeftAndRight12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/kyc_top_hint"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- 身份证拍照 -->
            <com.colombia.credit.view.identity.IdentityLayout
                android:id="@+id/il_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:id="@+id/ll_kyc_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <com.colombia.credit.view.textview.EasyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:drawableStart="@drawable/svg_red_warning"
                    android:drawablePadding="6dp"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="4dp"
                    android:text="@string/kyc_warning"
                    android:textColor="@color/color_666666"
                    android:textSize="10sp"
                    app:etv_corner="4dp"
                    app:etv_corner_type="normal"
                    app:etv_solid="@color/color_F9F2FC" />

                <!--身份证号-->
                <com.colombia.credit.view.baseinfo.BaseInfoView
                    android:id="@+id/kyc_biv_nuip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hint="@string/kyc_nuip_hint"
                    app:if_can_edit="true"
                    app:left_icon="@drawable/ic_nuip"
                    app:max_length="15"
                    app:digits="0123456789."
                    app:rightIcon_visiblity="gone"
                    app:title="@string/kyc_nuip" />

                <!-- 名字 -->
                <com.colombia.credit.view.baseinfo.BaseInfoView
                    android:id="@+id/kyc_biv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:hint="@string/kyc_name_hint"
                    app:left_icon="@drawable/ic_name"
                    app:max_length="30"
                    app:rightIcon_visiblity="gone"
                    app:title="@string/kyc_name" />

                <!-- 父姓 -->
                <com.colombia.credit.view.baseinfo.BaseInfoView
                    android:id="@+id/kyc_biv_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:hint="@string/kyc_surname_hint"
                    app:left_icon="@drawable/ic_father"
                    app:max_length="30"
                    app:rightIcon_visiblity="gone"
                    app:title="@string/kyc_surname" />

                <!-- 生日 -->
                <com.colombia.credit.view.baseinfo.BaseInfoView
                    android:id="@+id/kyc_biv_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:hint="@string/kyc_birthday_hint"
                    app:if_can_edit="false"
                    app:inputType="number"
                    app:left_icon="@drawable/ic_birthday"
                    app:max_length="16"
                    app:rightIcon_visiblity="gone"
                    app:title="@string/kyc_birthday" />

                <!-- 性别 -->
                <com.colombia.credit.view.baseinfo.BaseInfoView
                    android:id="@+id/kyc_biv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:hint="@string/kyc_gender_hint"
                    app:if_can_edit="false"
                    app:left_icon="@drawable/ic_gender"
                    app:rightIcon_visiblity="visible"
                    app:title="@string/kyc_gender" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:minHeight="26dp" />

                <TextView
                    android:id="@+id/tv_commit"
                    style="@style/marginLeftAndRight12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/shape_apply_bg"
                    android:gravity="center"
                    android:padding="11dp"
                    android:text="@string/commit"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:drawableLeft="@drawable/svg_safe"
                android:drawablePadding="4dp"
                android:text="@string/process_safe"
                android:textColor="@color/color_aaaaaa"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>