<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_title"
        style="@style/marginLeftAndRight16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/detail_title"
        android:textColor="@color/color_333333"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 放款金额 -->
    <com.colombia.credit.view.ItemInfoLayout
        android:id="@+id/iil_loan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:paddingTop="14dp"
        app:iil_left_text="@string/dialog_loan_amount_text"
        app:iil_right_text_bold="true"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />
    <!-- 利息 -->
    <com.colombia.credit.view.ItemInfoLayout
        android:id="@+id/iil_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        app:iil_left_text="@string/loan_interest_text"
        app:iil_right_text_bold="true"
        app:layout_constraintTop_toBottomOf="@id/iil_loan" />
    <!-- 逾期金额 -->
    <com.colombia.credit.view.ItemInfoLayout
        android:id="@+id/iil_overdue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        app:iil_left_text="@string/overdue_text"
        app:iil_right_text_bold="true"
        app:iil_right_text_color="@color/color_FE4F4F"
        app:layout_constraintTop_toBottomOf="@id/iil_interest" />

    <com.colombia.credit.view.ItemInfoLayout
        android:id="@+id/iil_repay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        app:iil_left_text="@string/repay_detail_hint"
        app:iil_right_text_bold="true"
        app:layout_constraintTop_toBottomOf="@id/iil_overdue" />

</androidx.constraintlayout.widget.ConstraintLayout>